--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="acb575">  <td>18/08/19 08:08:46</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;NewTest.afterTest()[pri:0, instance:Testfile.NewTest@5034c75a]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@670035812</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/19 08:08:37</td>   <td>-8558</td> <td>&nbsp;</td><td title="&gt;&gt;NewTest.beforeTest()[pri:0, instance:Testfile.NewTest@5034c75a]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@670035812</td>   <td></td> </tr>
-<tr bgcolor="acb575">  <td>18/08/19 08:08:41</td>   <td>-5072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewTest.sample()[pri:0, instance:Testfile.NewTest@5034c75a]">sample</td> 
-  <td>main@670035812</td>   <td></td> </tr>
+<tr bgcolor="7be3c5">  <td>18/08/21 16:19:31</td>   <td>0</td> <td title="&lt;&lt;TestBase.TeardownTest()[pri:0, instance:Testfile.FBLoginTest@d2cc05a]">&lt;&lt;TeardownTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1006485584</td>   <td></td> </tr>
+<tr bgcolor="97b490">  <td>18/08/21 16:19:14</td>   <td>-17629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="FBLoginTest.init()[pri:0, instance:Testfile.FBLoginTest@d2cc05a]">init</td> 
+  <td>main@1006485584</td>   <td></td> </tr>
+<tr bgcolor="7be3c5">  <td>18/08/21 16:19:09</td>   <td>-22228</td> <td title="&gt;&gt;TestBase.initialize()[pri:0, instance:Testfile.FBLoginTest@d2cc05a]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1006485584</td>   <td></td> </tr>
 </table>
